# libvfio-user

./: .clangd  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  groups  meson.build  meson_options.txt  project.config  vfio_user.h
.github/: settings.yml
.github/workflows/: coverity.yml  pull_request.sh  pull_request.yml
docs/: Makefile  conf.py  develop.md  examples.md  index.rst  ioregionfd.md  libvirt.md  memory-mapping.md  qemu.md  shadow_ioeventfd.md  spdk.md  testing.md  vfio-user.rst
include/: CMakeLists.txt  libvfio-user.h  muser.h  pci.h  pci_defs.h  vfio-user.h  vfio_user.h
include/pci_caps/: common.h  dsn.h  msi.h  msix.h  pm.h  px.h
kmod/: CMakeLists.txt  muser.c  muser.h
lib/: CMakeLists.txt  btree.c  btree.h  cap.c  cap.h  common.h  dma.c  dma.h  extended_cap.c  fd_cache.c  fd_cache.h  iommufd.c  iommufd.h  irq.c  irq.h  libmuser.c  libmuser_pci.c  libvfio-user.c  meson.build  migration.c  migration.h  migration_priv.h  msicap.h  muser.h  muser_ctx.c  muser_pci.c  muser_priv.h  pci.c  pci.h  pci_caps.c  pci_caps.h  pmcap.h  private.h  python_bindings.c  python_bindings_install.sh  setup.py  tran.c  tran.h  tran_pipe.c  tran_sock.c  (+2 more)
lib/caps/: common.h  msi.h  msix.h  pm.h  px.h
libvfio/: CMakeLists.txt  libvfio.c
linux-headers/linux/: vfio.h
patches/: vfio.diff
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/gpio-pci-idio-16/: Cargo.toml  build.rs
rust/gpio-pci-idio-16/src/: main.rs
rust/lib/: Cargo.toml
rust/lib/src/: bindings.rs  lib.rs
rust/src/: bindings.rs  lib.rs
samples/: CMakeLists.txt  client.c  gpio-pci-idio-16.c  gpio-pci-idio-16.py  gpio-pcio-idio-16.rs  lspci.c  meson.build  null.c  server.c  shadow_ioeventfd_server.c  shadow_ioeventfd_speed_test.c  test_dma_map.c  test_mmap.c  test_read.c
scripts/: pre-push.sh  scan-build.sh
src/: main.rs
test/: CMakeLists.txt  btree_fuzz_test.c  btree_unit_tests.c  fd_cache_unit_tests.c  lspci.expected.out.1  lspci.expected.out.2  lspci.expected.out.3  lspci.expected.out.4  lspci.expected.out.5  meson.build  mocks.c  mocks.h  test-client-server.sh  test-linkage.sh  test-lspci.sh  unit-tests.c
test/py/: libvfio_user.py  meson.build  test_destroy.py  test_device_features.py  test_device_get_info.py  test_device_get_irq_info.py  test_device_get_region_info.py  test_device_get_region_info_zero_size.py  test_device_get_region_io_fds.py  test_device_set_irqs.py  test_dirty_pages.py  test_dma_map.py  test_dma_unmap.py  test_irq_trigger.py  test_map_unmap_sg.py  test_migration.py  test_negotiate.py  test_pci_caps.py  test_pci_ext_caps.py  test_pci_status.py  test_quiesce.py  test_request_errors.py  test_setup_region.py  test_sgl_get_put.py  test_sgl_read_write.py  test_shadow_ioeventfd.py  test_vfu_create_ctx.py  test_vfu_realize_ctx.py
